--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -6,3 +6,7 @@
 nav {
     background-image: url("../../public/images/enclos.png");
 }
+
+.text-footer {
+    @apply text-gray-50 hover:text-gray-300 dark:text-gray-300 dark:hover:text-white transition-colors duration-200 font-montserrat font-semibold;
+}
