add first part of static pages
Création des pages statics des routes qui vont avec ainsi que la mise à jours des liens où ils sont appelés.Création des functions dans le controller ainsi que la requête de validation pour le formulaire de contact.

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -10,3 +10,17 @@ nav {
 .text-footer {
     @apply text-gray-50 hover:text-gray-300 dark:text-gray-300 dark:hover:text-white transition-colors duration-200 font-montserrat font-semibold;
 }
+
+/*Style pour les toggle checkbox*/
+/* CHECKBOX TOGGLE SWITCH */
+/* @apply rules for documentation, these do not work as inline style */
+.toggle-checkbox:checked {
+    @apply: right-0 border-green-400;
+    right: 0;
+    border-color: #68D391;
+}
+
+.toggle-checkbox:checked + .toggle-label {
+    @apply: bg-green-400;
+    background-color: #68D391;
+}
