--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -8,7 +8,7 @@ nav {
 }
 
 .text-footer {
-    @apply text-gray-50 hover:text-gray-300 dark:text-gray-300 dark:hover:text-white transition-colors duration-200 font-montserrat font-semibold;
+    @apply font-semibold text-gray-50 transition-colors duration-200 hover:text-gray-300 dark:text-gray-300 dark:hover:text-white font-montserrat;
 }
 
 /*Style pour les toggle checkbox*/
@@ -57,4 +57,7 @@ div.tox:nth-child(2) {
     @apply w-full px-3 py-1 text-base leading-8 text-gray-700 transition-colors duration-200 ease-in-out bg-white border border-gray-300 rounded outline-none focus:border-dino-500 dark:bg-gray-800 dark:placeholder-gray-400 dark:border-black dark:text-gray-100
 }
 
+.btn-pagination {
+    @apply py-2 px-3 mx-1 text-gray-700 shadow bg-white rounded-md dark:bg-gray-900 dark:text-gray-200 hover:bg-dino-600 dark:hover:bg-punch-500 hover:text-white dark:hover:text-gray-200
+}
 
